# talking-head-anime-3-demo

./: .gitignore  Dockerfile  LICENSE  README.md  colab.ipynb  docker-compose-api.yaml  docker-compose.yaml  environment.yml  manual_poser.ipynb  pyproject.toml
data/images/: CC-BY-NC.txt  README.md
data/models/: placeholder.txt
tha3/: util.py
tha3/app/: ifacialmocap_puppeteer.py  manual_poser.py  manual_poser_api.py  manual_poser_st.py  random_puppet.py
tha3/app/model/: model.py
tha3/compute/: cached_computation_func.py  cached_computation_protocol.py
tha3/mocap/: ifacialmocap_constants.py  ifacialmocap_pose.py  ifacialmocap_poser_converter_25.py  ifacialmocap_v2.py
tha3/nn/: conv.py  image_processing_util.py  init_function.py  nonlinearity_factory.py  normalization.py  resnet_block.py  resnet_block_seperable.py  separable_conv.py  util.py
tha3/nn/common/: conv_block_factory.py  poser_args.py  poser_encoder_decoder_00.py  poser_encoder_decoder_00_separable.py  resize_conv_encoder_decoder.py  resize_conv_unet.py
tha3/nn/editor/: editor_07.py
tha3/nn/eyebrow_decomposer/: eyebrow_decomposer_00.py  eyebrow_decomposer_03.py
tha3/nn/eyebrow_morphing_combiner/: eyebrow_morphing_combiner_00.py  eyebrow_morphing_combiner_03.py
tha3/nn/face_morpher/: face_morpher_08.py  face_morpher_09.py
tha3/nn/two_algo_body_rotator/: two_algo_face_body_rotator_05.py
tha3/poser/: general_poser_02.py  poser.py
tha3/poser/modes/: load_poser.py  pose_parameters.py  separable_float.py  separable_half.py  standard_float.py  standard_half.py
